--- a/package.json
+++ b/package.json
@@ -4,7 +4,11 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "nodemon"
+    "dev": "nodemon",
+    "build:dev": "NODE_ENV=dev webpack --config ./webpack/dev.config.js",
+    "build": "NODE_ENV=prod webpack --config ./webpack/prod.config.js",
+    "start:dev": "npm run build:dev && node dist/server.js",
+    "start": "npm run build && node dist/server.js"
   },
   "keywords": [],
   "author": "",
@@ -18,8 +22,13 @@
     "@types/lodash": "^4.14.194",
     "@types/node": "^18.15.11",
     "nodemon": "^2.0.22",
+    "ts-loader": "^9.4.2",
     "ts-node": "^10.9.1",
-    "typescript": "^5.0.4"
+    "typescript": "^5.0.4",
+    "webpack": "^5.83.1",
+    "webpack-cli": "^5.1.1",
+    "webpack-merge": "^5.8.0",
+    "webpack-node-externals": "^3.0.0"
   },
   "dependencies": {
     "@types/mongoose": "^5.11.97",
