--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "mock-server",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "server.js",
   "scripts": {
     "dev": "nodemon",
     "build:dev": "NODE_ENV=dev webpack --config ./webpack/dev.config.js",
